smaller screens get a compressed table, same data shown.

--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -385,7 +385,25 @@ header {
 }
 
 
+
 /*****Media Tags for alternating screen size******/
+
+@media(max-width:1366px) {
+
+    .edit-rows > th:nth-child(2), .edit-rows > th:nth-child(3), .edit-rows > th:nth-child(4), .edit-rows > td:nth-child(2), .edit-rows > td:nth-child(3), .edit-rows > td:nth-child(4) {
+        display: none;
+    }
+
+    /*.edit-rows > th:nth-child(1), .edit-rows > td:nth-child(1) {
+        display: table-column;
+    }*/
+}
+
+@media(min-width: 1366px) {
+    .edit-rows > th:nth-child(1), .edit-rows > td:nth-child(1) {
+        display: none;
+    }
+}
 
 /*removes tables columns on shrinking size*/
 @media(max-width:767px){
@@ -393,8 +411,6 @@ header {
         display: none;
         overflow: scroll;
     }
-
-
 }
 @media(min-width:768px){}
 
