created a single publicVM editor to play around with, having trouble doing this for an IENumerable of editable publicVMs.

--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -8,13 +8,13 @@
 @using (Html.BeginForm("Index", "Folder", FormMethod.Get))
 {
     <h1>Enter the Client Id then Submit</h1>
-    <h2>Ramin: 568801</h2>
+    <h2>Ramin: 568801</h2> <!--34 folder id on local-->
     <h2>Mary: 1186367</h2>
     <h2>Jackie Tester account with training2 server: 1435693</h2>
     <h2>Client Id with a picture: 1403635</h2>
     <h2>Browns Client Id = 1012504</h2>
     @Html.Label("ClientId", "Client Id")
-    @Html.TextBox("ClientId", 568801);
+    @Html.TextBox("ClientId", 568801); 
 
     <input type="submit" name="Role" value="Submit" />
     <input type="submit" name="Role" value="Admin" />
