--- a/DocSearch2.1/Views/Admin/_EditTable.cshtml
+++ b/DocSearch2.1/Views/Admin/_EditTable.cshtml
@@ -1,123 +1,126 @@
-﻿@model IEnumerable<DocSearch2._1.ViewModels.PublicVM>
+﻿@model List<DocSearch2._1.ViewModels.PublicVM>
 
-<table class="edit-table table">
-    <thead>
-        <tr class="edit-rows">
-            <th>
-                @Html.DisplayNameFor(model => model.Document_ID)
-                <br />
-                @Html.DisplayNameFor(model => model.CategoryName)
-                <br />
-                @Html.DisplayNameFor(model => model.DocumentTypeName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Document_ID)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CategoryName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DocumentTypeName)
-            </th>
-            <th>
-                <!--EDITABLE-->
-                @Html.DisplayNameFor(model => model.IssueDate)
-            </th>
-            <th>
-                <!--EDITABLE-->
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.EffectiveDate)
-            </th>*@
-            @*<th>
-                @Html.DisplayNameFor(model => model.RefNumber)
-            </th>*@
-            @*<th>
-                @Html.DisplayNameFor(model => model.FileType)
-            </th>*@
-            <th>
-                <!--EDITABLE-->
-                @Html.DisplayNameFor(model => model.Method)
-            </th>
-            <th>
-                <!--EDITABLE-->
-                @Html.DisplayNameFor(model => model.Originator)
-            </th>
-            <th>
-                <!--EDITABLE-->
-                @Html.DisplayNameFor(model => model.Reason)
-            </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.Supplier)
-            </th>*@
-            @*<th>Direction</th>*@
-            <th>
-                @Html.DisplayNameFor(model => model.Recipient)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FileType)
-            </th>
-            @*<th>Recieved On</th>*@
-            <th>Hide</th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model)
+@using (Html.BeginForm())
 {
-    <tr class="edit-rows">
-        <!--Old DocSearch has option for editing Direction.  After thorough thought and discussion with support, I believe this is not needed to be changed.
-                1) Commons users has no option in seeing the Direction column
-                2) Support recalls no past issues from common users to edit this column
-            ***Same reasoning for Recived_On-->
-        <td>
-            @Html.DisplayFor(modelItem => item.Document_ID)
-            <br />
-            @Html.DisplayFor(modelItem => item.CategoryName)
-            <br />
-            @Html.DisplayFor(modelItem => item.DocumentTypeName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Document_ID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CategoryName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DocumentTypeName)
-        </td>
-        <td>
-            @Html.TextBoxFor(modelItem => item.IssueDate, "{0:dd MMM yyyy}", new { @class = "edit-issue", size = 10 })
-        </td>
-        <td>
-            @*@Html.DisplayFor(modelItem => item.Description)*@
-            @Html.TextAreaFor(modelItem => item.Description, new { @class = "form-control", rows = "3" })
-        </td>
-        @*<td>
-                @Html.DisplayFor(modelItem => item.EffectiveDate)
-            </td>*@
-        @*<td>
-                @Html.DisplayFor(modelItem => item.RefNumber)
-            </td>*@
-        @*<td>
-                @Html.DisplayFor(modelItem => item.FileType)
-            </td>*@
-        <td>
-            @*@Html.DisplayFor(modelItem => item.Method)*@
-            @Html.DropDownListFor(modelItem => item.Method, new List<SelectListItem> {
+    @Html.AntiForgeryToken()
+    <table class="edit-table table">
+        <thead>
+            <tr class="edit-rows">
+                <th>
+                    @Html.DisplayNameFor(model => model.First().Document_ID)
+                    <br />
+                    @Html.DisplayNameFor(model => model.First().CategoryName)
+                    <br />
+                    @Html.DisplayNameFor(model => model.First().DocumentTypeName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.First().Document_ID)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.First().CategoryName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.First().DocumentTypeName)
+                </th>
+                <th>
+                    <!--EDITABLE-->
+                    @Html.DisplayNameFor(model => model.First().IssueDate)
+                </th>
+                <th>
+                    <!--EDITABLE-->
+                    @Html.DisplayNameFor(model => model.First().Description)
+                </th>
+                @*<th>
+                        @Html.DisplayNameFor(model => model.EffectiveDate)
+                    </th>*@
+                @*<th>
+                        @Html.DisplayNameFor(model => model.RefNumber)
+                    </th>*@
+                @*<th>
+                        @Html.DisplayNameFor(model => model.FileType)
+                    </th>*@
+                <th>
+                    <!--EDITABLE-->
+                    @Html.DisplayNameFor(model => model.First().Method)
+                </th>
+                <th>
+                    <!--EDITABLE-->
+                    @Html.DisplayNameFor(model => model.First().Originator)
+                </th>
+                <th>
+                    <!--EDITABLE-->
+                    @Html.DisplayNameFor(model => model.First().Reason)
+                </th>
+                @*<th>
+                        @Html.DisplayNameFor(model => model.Supplier)
+                    </th>*@
+                @*<th>Direction</th>*@
+                <th>
+                    @Html.DisplayNameFor(model => model.First().Recipient)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.First().FileType)
+                </th>
+                @*<th>Recieved On</th>*@
+                <th>Active</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr class="edit-rows">
+                    <!--Old DocSearch has option for editing Direction.  After thorough thought and discussion with support, I believe this is not needed to be changed.
+                            1) Commons users has no option in seeing the Direction column
+                            2) Support recalls no past issues from common users to edit this column
+                        ***Same reasoning for Recived_On-->
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Document_ID)
+                        <br />
+                        @Html.DisplayFor(modelItem => item.CategoryName)
+                        <br />
+                        @Html.DisplayFor(modelItem => item.DocumentTypeName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Document_ID)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CategoryName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DocumentTypeName)
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(modelItem => item.IssueDate, "{0:dd MMM yyyy}", new { @class = "edit-issue", size = 10 })
+                    </td>
+                    <td>
+                        @*@Html.DisplayFor(modelItem => item.Description)*@
+                        @Html.TextAreaFor(modelItem => item.Description, new { @class = "form-control", rows = "3" })
+                    </td>
+                    @*<td>
+                            @Html.DisplayFor(modelItem => item.EffectiveDate)
+                        </td>*@
+                    @*<td>
+                            @Html.DisplayFor(modelItem => item.RefNumber)
+                        </td>*@
+                    @*<td>
+                            @Html.DisplayFor(modelItem => item.FileType)
+                        </td>*@
+                    <td>
+                        @*@Html.DisplayFor(modelItem => item.Method)*@
+                        @Html.DropDownListFor(modelItem => item.Method, new List<SelectListItem> {
 
                 new SelectListItem { Value = "0", Text = "Email" },
                 new SelectListItem { Value = "1", Text = "Fax" },
                 new SelectListItem { Value = "2", Text = "Mail" }
             }, item.Method, null)
-        </td>
-        <td>
-            @*@Html.DisplayFor(modelItem => item.Originator)*@
-            @Html.TextBoxFor(modelItem => item.Originator)
-        </td>
-        <td>
-            @*@Html.DisplayFor(modelItem => item.Reason)*@
-            @Html.DropDownListFor(modelItem => item.Reason, new List<SelectListItem> {
+                    </td>
+                    <td>
+                        @*@Html.DisplayFor(modelItem => item.Originator)*@
+                        @Html.TextBoxFor(modelItem => item.Originator)
+                    </td>
+                    <td>
+                        @*@Html.DisplayFor(modelItem => item.Reason)*@
+                        @Html.DropDownListFor(modelItem => item.Reason, new List<SelectListItem> {
 
                 new SelectListItem { Value = "0", Text = "Cancel/Lapse" },
                 new SelectListItem { Value = "1", Text = "Endorse" },
@@ -129,32 +132,33 @@
                 new SelectListItem { Value = "7", Text = "Other" }
 
             }, item.Reason, null)
-        </td>
-        @*<td>
-                @Html.DisplayFor(modelItem => item.Supplier)
-            </td>*@
-        <td>
-            @Html.TextBoxFor(modelItem => item.Recipient)
-        </td>
-        @*<td></td>*@
-        <td>
-            @Html.ActionLink(item.FileType, "FileDisplay", "PublicVM", new { documentId = item.Document_ID }, new { target = "_blank" })
-            @if (item.FileType == "Picture JPEG")
-            {
-                <br />
-                                <div class="preview_image">
-                                    @Html.ActionLink("[Preview]", "FileDisplay", "PublicVM", new { documentId = item.Document_ID }, new { @class = "preview", id = item.Document_ID + 'a' })
-                                </div>
+                    </td>
+                    @*<td>
+                            @Html.DisplayFor(modelItem => item.Supplier)
+                        </td>*@
+                    <td>
+                        @Html.TextBoxFor(modelItem => item.Recipient)
+                    </td>
+                    @*<td></td>*@
+                    <td>
+                        @Html.ActionLink(item.FileType, "FileDisplay", "PublicVM", new { documentId = item.Document_ID }, new { target = "_blank" })
+                        @if (item.FileType == "Picture JPEG")
+                        {
+                            <br />
+                            <div class="preview_image">
+                                @Html.ActionLink("[Preview]", "FileDisplay", "PublicVM", new { documentId = item.Document_ID }, new { @class = "preview", id = item.Document_ID + 'a' })
+                            </div>
+                        }
+                    </td>
+                    <td>
+                        @*@Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
+                        @*Html.CheckBoxFor()*@
+                        @Html.CheckBoxFor(modelItem => item.Hidden)
+                    </td>
+                </tr>
             }
-        </td>
-        <td>
-            @*@Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
-            @*Html.CheckBoxFor()*@
-        </td>
-    </tr>
+        </tbody>
+    </table>
+
+    <input type="submit" value="Update"/>
 }
-    </tbody>
-
-
-</table>
-<button>Submit</button>
