--- a/DocSearch2.1/Views/Admin/Edit1.cshtml
+++ b/DocSearch2.1/Views/Admin/Edit1.cshtml
@@ -1,4 +1,4 @@
-﻿@model DocSearch2._1.ViewModels.PublicVM
+﻿@model IEnumerable<PublicVM>
 
 @{
     ViewBag.Title = "Edit1";
@@ -7,290 +7,78 @@
 
 <h2>Edit1</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit1", "Admin", FormMethod.Post))
 {
-    @Html.AntiForgeryToken()
-    
-    <table>
+    @*@Html.AntiForgeryToken()*@
+
+    <table class="table">
         <thead>
             <tr>
                 <th>
-                    @Html.LabelFor(model => model.Folder_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.Folder_ID)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.Document_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.Document_ID)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.DocumentType_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.DocumentType_ID)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.DocumentTypeName, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.DocumentTypeName)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.IssueDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.IssueDate)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.Description)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.Category_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.Category_ID)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.CategoryName, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.CategoryName)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.EffectiveDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.EffectiveDate)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.RefNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.RefNumber)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.FileType, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.FileType)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.Method, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.Method)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.Originator, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.Originator)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.Reason, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.Reason)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.Supplier, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.Supplier)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.Recipient, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.Recipient)
                 </th>
                 <th>
-                    @Html.LabelFor(model => model.Hidden, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DisplayNameFor(model => model.Hidden)
                 </th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>
-                    @Html.EditorFor(model => model.Folder_ID, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Folder_ID, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.Document_ID, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Document_ID, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.DocumentType_ID, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.DocumentType_ID, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.DocumentTypeName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.DocumentTypeName, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.IssueDate, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.IssueDate, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.Category_ID, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Category_ID, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.CategoryName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.EffectiveDate, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.EffectiveDate, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.RefNumber, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.RefNumber, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.FileType, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.FileType, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.Method, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Method, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.Originator, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Originator, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.Reason, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Reason, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.Supplier, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Supplier, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.Recipient, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Recipient, "", new { @class = "text-danger" })
-                </td>
-                <td>
-                    @Html.EditorFor(model => model.Hidden)
-                    @Html.ValidationMessageFor(model => model.Hidden, "", new { @class = "text-danger" })
-                </td>
-            </tr>
+        <tbody id="childtable">
+                @Html.EditorFor(model => Model)
         </tbody>
     </table>
 
-    @*<div class="form-horizontal">
-        <h4>PublicVM</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Folder_ID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Folder_ID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Folder_ID, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-default" />
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Document_ID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Document_ID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Document_ID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DocumentType_ID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DocumentType_ID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DocumentType_ID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DocumentTypeName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DocumentTypeName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DocumentTypeName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.IssueDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.IssueDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IssueDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Category_ID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Category_ID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Category_ID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CategoryName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CategoryName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.EffectiveDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EffectiveDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EffectiveDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.RefNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RefNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RefNumber, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.FileType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FileType, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FileType, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Method, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Method, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Method, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Originator, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Originator, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Originator, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Reason, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Reason, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Reason, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Supplier, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Supplier, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Supplier, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Recipient, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Recipient, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Recipient, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Hidden, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Hidden)
-                    @Html.ValidationMessageFor(model => model.Hidden, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>*@
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    @*</div>*@
+    </div>
 }
-
+@Html.ValidationSummary()
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
