cleaned up todays code for model binding issues

--- a/DocSearch2.1/Views/Admin/_EditTable.cshtml
+++ b/DocSearch2.1/Views/Admin/_EditTable.cshtml
@@ -2,7 +2,7 @@
 
 @using (Html.BeginForm("Edit", "Admin", FormMethod.Post))
 {
-    @*@Html.AntiForgeryToken()*@
+    @Html.AntiForgeryToken()
 
     <table class="edit-table table">
         <thead>
