--- a/DocSearch2.1/Views/Shared/_Form.cshtml
+++ b/DocSearch2.1/Views/Shared/_Form.cshtml
@@ -35,7 +35,7 @@
                }, new { @class = "button", id = "clearButton" })
             </div>
         </div>
-        <div class="col-md-12 row">
+        <div class="form-inputs col-md-12 row">
             <div class="filter col-md-3">
                 <label for="search">Search Description:</label>
                 @*<input id="search" type="hidden" name="publicId" value="@Model.First().Folder_ID" />*@
