--- a/DocSearch2.1/Views/Admin/EditorTemplates/PublicVM.cshtml
+++ b/DocSearch2.1/Views/Admin/EditorTemplates/PublicVM.cshtml
@@ -9,7 +9,7 @@
         <br />
         @Html.DisplayFor(model => model.CategoryName, new { htmlAttributes = new { @class = "form-control" } })
         <br />
-        @Html.DisplayFor(model => model.DocumentType_ID, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.DisplayFor(model => model.DocumentTypeName, new { htmlAttributes = new { @class = "form-control" } })
     </td>
     <td>
         @Html.DisplayFor(model => model.Document_ID, new { htmlAttributes = new { @class = "form-control" } })
