Added a filter for needing a non-null DocumentNumber data value for admin to see the record

--- a/DocSearch2.1/Views/Shared/_Form.cshtml
+++ b/DocSearch2.1/Views/Shared/_Form.cshtml
@@ -78,7 +78,7 @@
         </div>
     </form>
 
-    @if (TempData["Role"] != null && TempData["Role"].ToString() == "Admin")
+    @if (TempData["Role"] != null && TempData["Role"].ToString() == "admin")
     {
         using (Html.BeginForm("Edit", "Admin"))
         {
