--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -23,11 +23,11 @@
 <br/><br />
 
 @*Should eventually move this functionality into a role specific button/dropdown inside the main page*@
-@using (Html.BeginForm("DownloadAllDocuments", "Folder", FormMethod.Get)) {
+@*@using (Html.BeginForm("DownloadAllDocuments", "Folder", FormMethod.Get)) {
     <h1>Download all files from this Folder</h1>
 
     @Html.Label("ClientId", "Client Id ")
     @Html.TextBox("ClientId", 568801);
 
     <input type="submit" value="Submit" />
-}
+}*@
