Better, logical display of Active_IND column in admin view

--- a/DocSearch2.1/Views/Shared/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/Shared/_PublicTable.cshtml
@@ -224,7 +224,15 @@
                         @if (TempData["Role"] != null && TempData["Role"].ToString() == "admin")
                         {
                             <td>
-                                @Html.DisplayFor(modelItem => item.Hidden)
+                                @*@Html.DisplayFor(modelItem => item.Hidden)*@
+                                @if (item.Hidden == true)
+                                {
+                                    @Html.Raw("Visible")
+                                }
+                                else
+                                {
+                                    @Html.Raw("Hidden")
+                                }
                             </td>
                         }
                         @if (TempData["Role"] != null && TempData["Role"].ToString() == "admin")
