changed the VM to take fileextension over filetype (mainly for visual reasons), small css/js changes.

--- a/DocSearch2.1/Views/Shared/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/Shared/_PublicTable.cshtml
@@ -196,6 +196,22 @@
                             @Html.DisplayFor(modelItem => item.Description)
                         </td>
                         <td>
+                            @if (item.FileExtension == null || item.FileExtension.Length < 1)
+                            {
+                                @Html.Raw("N/A");
+                            }
+                            else
+                            {
+                                @Html.ActionLink(item.FileExtension.Trim(), "FileDisplay", new { documentId = item.Document_ID }, new { target = "_blank" })
+                                if (item.FileExtension.Trim() == "jpg" || item.FileExtension.Trim() == "png")
+                                {
+                                    <div class="preview_image">
+                                        @Html.ActionLink("[Preview]", "FileDisplay", new { documentId = item.Document_ID }, new { @class = "preview", id = item.Document_ID + 'a' })
+                                    </div>
+                                }
+                            }
+                        </td>
+                        @*<td>
                             @if (item.FileType == null || item.FileType.Length < 1)
                             {
                                 @Html.Raw("N/A");
@@ -211,7 +227,7 @@
                                     </div>
                                 }
                             }
-                        </td>
+                        </td>*@
                         <td>
                             <a href="#" class="miscTableLink" method="get" action="@Url.Action("MiscData", new { documentId = item.Document_ID, subNav = ViewData["currentNav"], prevNav = ViewData["currentNavTitle"], })" data-otf-ajax="true" data-otf-target="#@item.Document_ID.ToString()"><i class="fa fa-expand"></i></a>
                         </td>
